--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,6 @@
 }
 html {
     scroll-behavior: smooth;
-    --boxes: black;
 }
 .light-mode {
     background-color: white;
@@ -60,4 +59,24 @@ strong {
 }
 button {
     font-family: "Montserrat", Arial, sans-serif;
+}
+.btn-border {
+    background-color: transparent;
+    border: 3px solid var(--red);
+    color: var(--red);
+    margin-top: 1.5rem;
+    padding: 10px;
+    font-weight: 700;
+    transition: transform .3s, box-shadow 0.3s,
+    background-color .3s, color .3s;
+    font-size: var(--size-sm);
+}
+.btn-border:hover {
+    background-color: var(--red);
+    color: white;
+    box-shadow: 0 0 150px var(--red);
+    transform: translateY(-3px);
+}
+a {
+    text-decoration: none;
 }
