--- a/src/hero.css
+++ b/src/hero.css
@@ -29,7 +29,7 @@
     height: 3.5rem;
     border: 1px solid var(--red);
     box-sizing: border-box;
-    background-color: #6200ff0f;
+    background-color: rgba(98, 0, 255, .1);
 }
 #hero-title {
     font-size: var(--size-4xl);
@@ -58,20 +58,4 @@
     line-height: 1.3rem;
     width: 32ch;
     margin-top: 2rem;
-}
-.btn-border {
-    background-color: transparent;
-    border: 3px solid var(--red);
-    color: var(--red);
-    margin-top: 1.5rem;
-    padding: 10px;
-    font-weight: 700;
-    transition: transform .3s, box-shadow 0.3s,
-    background-color .3s, color .3s;
-}
-.btn-border:hover {
-    background-color: var(--red);
-    color: white;
-    box-shadow: 0 0 150px var(--red);
-    transform: translateY(-3px);
 }
